--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -36,9 +36,13 @@ a {
   transition: background 0.5s;
 }
 
-.menu-icon {
+.menu-icon,
+.close-icon {
   display: none;
+  width: 30px;
+  cursor: pointer;
 }
+
 @media (max-width: 1000px) {
   .logo {
     width: 120px;
@@ -57,22 +61,26 @@ a {
     top: 0;
     right: 0;
     bottom: 0;
-    background: #212ea0;
+    background: #1976d2;
     z-index: -1;
     width: 200px;
-    padding-top: 70px;
+    padding-top: 150px;
     transition: 0.5s;
   }
   nav ul li {
     display: block;
     margin: 25px 40px;
   }
-  .menu-icon {
-    display: block;
-    width: 30px;
-    cursor: pointer;
-  }
+
   .hide-mobile-menu {
     right: -200px;
+  }
+  .show {
+    opacity: 1;
+    display: block;
+  }
+  .hide {
+    opacity: 0;
+    display: none;
   }
 }
