--- a/src/Components/Campus/Campus.css
+++ b/src/Components/Campus/Campus.css
@@ -14,6 +14,10 @@
   /* height: 300px; */
   border-radius: 10px;
 }
+.about p {
+  color: #676767;
+  margin-bottom: 15px;
+}
 
 @media (max-width: 800px) {
   .gallery {
