--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -82,10 +82,10 @@
   .slide {
     padding: 10px;
   }
-  .slide img {
+  .img-frame {
     width: 50px;
     height: 50px;
-    border: 3px solid #212ea0;
+    /* border: 3px solid #212ea0; */
   }
 }
 
